--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -15,11 +15,11 @@
                 <table>
                     <tr>
                         <td width="20%" align="right"><span>账号：</span></td>
-                        <td width="80%"><input  style="display: inline;"  type="text" id="username" class="form-control"placeholder="登录账号" autocomplete="off"></td>
+                        <td width="80%"><input  style="display: inline;"  type="text" id="sjhm" class="form-control"placeholder="登录账号" autocomplete="off"></td>
                     </tr>
                     <tr>
                         <td width="20%" align="right"><span align="right">密码：</span></td>
-                        <td width="80%"><input  style="display: inline;"   type="password" id="password" class="form-control" placeholder="密码" autocomplete="off"></td>
+                        <td width="80%"><input  style="display: inline;"   type="password" id="pwd" class="form-control" placeholder="密码" autocomplete="off"></td>
                     </tr>
                 </table>
             </div>
