--- a/src/main/resources/templates/common/foot.html
+++ b/src/main/resources/templates/common/foot.html
@@ -1,7 +1,9 @@
 <style type="text/css">
-    .footer{margin-top: 500px;width:100%;height:80px;}
+    .footer{margin-top: 200px;width:100%;height:80px;}
 </style>
 <div align="center" class="footer">
-    <p>版权所有：阮光宇</p>
-    <p>服务电话：18827512636</p>
+    <div class="bqsy">
+        <p>版权所有：中国软件科技股份有限公司</p>
+        <p>服务电话：12366</p>
+    </div>
 </div>
