--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -12,7 +12,7 @@
                 <h4 class="modal-title text-center" id="myModalLabel">登录</h4>
             </div>
             <div class="modal-body" id = "model-body">
-                <table>
+                <table style="width: 412px">
                     <tr>
                         <td width="20%" align="right"><span>账号：</span></td>
                         <td width="80%"><input  style="display: inline;"  type="text" id="sjhm" class="form-control"placeholder="登录账号" autocomplete="off"></td>
