--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -17,25 +17,29 @@
             <table>
                 <tr>
                     <td width="20%" align="right"><span>账号：</span></td>
-                    <td width="80%"><input  style="display: inline;" type="text" id="username" class="form-control" autocomplete="off"></td>
+                    <td width="80%"><input  style="display: inline;" type="text" id="sjhm" class="form-control" autocomplete="off"></td>
                 </tr>
                 <tr>
                     <td width="20%" align="right"><span align="right">密码：</span></td>
-                    <td width="80%"><input  style="display: inline;"type="password" id="password" class="form-control" autocomplete="off"></td>
+                    <td width="80%"><input  style="display: inline;"type="password" id="pwd" class="form-control" autocomplete="off"></td>
                 </tr>
                 <tr>
                     <td width="20%" align="right"><span align="right">确认密码：</span></td>
-                    <td width="80%"><input  style="display: inline;"type="password" id="password1" class="form-control" autocomplete="off"></td>
+                    <td width="80%"><input  style="display: inline;"type="password" id="pwd1" class="form-control" autocomplete="off"></td>
                 </tr>
                 <tr>
                     <td width="20%" align="right"><span align="right">真实姓名：</span></td>
-                    <td width="80%"><input  style="display: inline;"type="text" id="truename" class="form-control" autocomplete="off"></td>
+                    <td width="80%"><input  style="display: inline;"type="text" id="xm" class="form-control" autocomplete="off"></td>
+                </tr>
+                <tr>
+                    <td width="20%" align="right"><span align="right">证件号码：</span></td>
+                    <td width="80%"><input  style="display: inline;"type="text" id="zjhm" class="form-control" autocomplete="off"></td>
                 </tr>
             </table>
         </div>
         <div class="modal-footer">
             <div class="form-group">
-                <button type="button" class="btn btn-primary form-control"  onclick="register()">确认注册</button>
+                <button type="button" class="btn btn-primary form-control"  onclick="to_register()">确认注册</button>
             </div>
 
         </div>
