--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -9,23 +9,48 @@
     <title>首页</title>
 </head>
 <div th:replace="common/top"></div>
-<div style="margin-top: 20px">
-        <table width="98%" align="center">
+
+<div class="container-fluid">
+    <div class="row-fluid" style="height: 500px;overflow: hidden">
+        <table width="98%">
             <tr>
-                <td name="gnmk" style="text-align: center;font-size: 20px;" th:each="gnmklist,status:${gnmk}">
-                    <form th:action="@{/home.do}" th:method="post">
-                        <span th:text="${gnmklist.mkmc}" onclick="tognmk(this)">
-                        </span>
-                        <input id="mkid" name="mkid" type="hidden" th:value="${gnmklist.id}">
-                    </form>
+                <td width="20%">
+                    <div class="span3">
+                        <div class="accordion" id="accordion-919397">
+                            <ul style="list-style: none" th:each="gnmklist,status:${gnmk}">
+                                <li>
+                                    <div class="accordion-group">
+                                        <div class="accordion-heading">
+                                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-919397" th:href="${gnmklist.mk_url}" th:text="${gnmklist.mkmc}"></a>
+                                        </div>
+                                        <ul th:each="gncdlist,status:${gncd}" style="list-style: none">
+                                            <li th:if="${gncdlist.mkid} == ${gnmklist.id}">
+                                                <div th:id="${gnmklist.mk_url1}" class="accordion-body collapse" >
+                                                    <div class="accordion-inner">
+                                                        <a th:href="${gncdlist.gn_url}"><span th:text="${gncdlist.gn_mc}"></span></a>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        </ul>
+
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </td>
+                <td>
+                    <div class="span9">
+                        <div class="page-header">
+                            <h1>
+                                页标题范例 <small>此处编写页标题</small>
+                            </h1>
+                        </div>
+                    </div>
                 </td>
             </tr>
         </table>
-    <table id="gncd_tab" width="20%" style="height: 500px;margin-left: 50px;">
-        <tr name="gnmk" style="text-align: center;font-size: 16px;" th:each="gncdlist,status:${gncd}">
-            <td th:text="${gncdlist.gn_mc}"></td>
-        </tr>
-    </table>
+    </div>
 </div>
 
 <div th:replace="common/foot"></div>
